frontend/src/components/style.css
/* ... */
.userSub_modal .modal_child figure img {
  width: 50px;
  height: 66.3px;
}
.userSub_modal p {
  font-size: 16px;
}
.userSub_modal .btns {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.userSub_modal .btns button:nth-child(1) {
  width: 132px;
  height: 45px;
  border-radius: 6px;
  background-color: #b8b8b8;
  margin-right: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  color: #fff;
}
.userSub_modal .btns button:nth-child(2) {
  width: 132px;
  height: 45px;
  border-radius: 6px;
  background-color: #8443e5;
  display: flex;
  align-items: center;
  justify-content: center;
  outline: none;
  border: none;
  color: #fff;
}
.close_modal {
  position: absolute;
  right: 2%;
  top: 0%;
  border: none;
  outline: none;
  background-color: #fff;
  font-size: 30px;
}
.dim {
  background-color: #000;
  opacity: 0.3;
}
.sub_nav button {
  border: none;
  outline: none;
  background-color: #fff;
  padding: 2px 6px;
  border-radius: 5px;
  margin-right: 20px;
}
.sub_nav .active_btn {
  background-color: #8443e5;
  color: #fff;
}

/* =================================Audition======================================= */
.side_nav {
  /* position: fixed; */
  background-color: #402c87;
  height: 100vh;
  padding: 30px 15px !important;
  display: flex;
  flex-direction: column;
}

.side_nav span {
  color: #fff;
  height: 30px;
  /* padding: 10px 5px; */
}

.side_nav span a {
  /* width: 100px; */
  padding: 3px 0px;
}

.lactive-class {
  border-bottom: 2px solid #fff;
}

.aa_head p {
  width: 170px;
}
.aa_head div {
  width: 100px;
}
.experience_container {
  position: relative;
}
.experience_container {
  padding: 10px 40px;
}
.ec_child {
  display: flex;
  scroll-behavior: smooth;
  overflow-x: hidden;
  overflow-y: hidden;
}
.experience_container .ec_child div {
  /* min-width: 48.7%;
  width: 48.7%; */
  min-width: 47%;
  width: 47%;
  border-radius: 6px;
  border: solid 1px #d1d1d1;
  padding: 10px;
  margin-right: 10px;
  height: 120px;
  /* width: 50% !important; */
}
.experience_container .controllers button:nth-child(1) {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translate(0%, -50%);
  height: 100%;
  border: none;
  background-color: #fff;
  padding: 0 10px;
  font-size: 20px;
}
.experience_container .controllers button:nth-child(2) {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(0%, -50%);
  height: 100%;
  border: none;
  background-color: #fff;
  padding: 0 10px;
  font-size: 20px;
}

/* ==============================Notification============================== */
.n_icon {
  position: relative;
}
.notif-options {
  position: absolute;
  right: 0;
  top: 110%;
  width: 372px;
  max-height: 285px;
  box-shadow: 0 8px 9px 0 rgba(160, 160, 160, 0.5);
  background-color: #fff;
  height: 0px;
  overflow-y: hidden;
  transition: all 0.5s ease-in;
}
.notif-options * {
  margin: 0;
}
.notif-options div {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.notif-options div div {
  display: flex;
  justify-content: start;
  align-items: center;
  flex-direction: row;
  padding: 0px 27px;
}
.notif-options div div:hover {
  background-color: #f2edf8;
}
.notif-options div div p {
  font-size: 14px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  margin-left: 10px;
  color: #8443e5;
}
.notif-options .view_all {
  height: fit-content;
  padding: 7px;
}
.notif-options .view_all p {
  font-size: 13px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: left;
  color: #cbcbcb !important;
}
.notif-options .view_all:hover p {
  color: #8443e5 !important;
}
.notif-options hr {
  margin: 0 27px;
}

.next_bottom {
  /* width: 100%; */
  height: 75px;
  background-color: #f4f4f4;
  display: flex;
  justify-content: end;
  align-items: center;
}
.next_bottom div {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.next_bottom div * {
  margin: 0 10px;
}
.next_bottom img {
  width: 42.5px;
  height: 42.5px;
}
.many_images img:nth-child(1) {
  width: 28px;
  height: 27px;
  margin-right: 2px;
}
.many_images img:nth-child(2) {
  width: 24px;
  height: 27px;
  margin-right: 2px;
}
.many_images img:nth-child(3) {
  width: 20px;
  height: 27px;
  margin-right: 2px;
}
.many_images span {
  width: 28px;
  height: 27px;
  font-size: 15px;
  padding: 5px 2px;

  background-color: #d8d8d8;
}

/* =======================================My role page=============================== */
.role_main {
  height: calc(100vh-100px);
  width: 100%;
  padding: 30px 19px 61px 42px;
}
.role_main h1 {
  height: 23px;
  margin: 0px 120px 30px 0;
  font-size: 18px;
  font-weight: bold;
  color: #444;
}
.role_main .long_Cards {
  border-radius: 6px;
  margin-bottom: 25px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  /* width: calc(657px + 150px); */
  width: 97%;
  height: 160px;
  box-shadow: 0 0 6px 0 rgba(158, 158, 158, 0.5);
}
.role_main .long_Cards .firstDiv {
  width: 200px;
  height: 160px;
  background-color: #8443e5;
  color: #fff;
}

.role_main .long_Cards div {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.role_main .long_Cards div span {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 0 16px;
  border-right: 1px solid #d8d8d8;
  height: 101px;
  width: 100%;
}
.role_main .long_Cards div span p {
  height: 18px;
  font-size: 14px;
  font-weight: bold;
  color: #b8b8b8;
}
.role_main .long_Cards div span h3 {
  color: #8443e5;
}

.role_main .long_Cards .--2 {
  background-color: #e543c3;
}

.role_card * {
  margin: 0;
}
/* ... */

